[package]
name = "rvp"
version = "0.1.4"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/samgozman/rvp"
repository = "https://github.com/samgozman/rvp"
authors = ["Sam Gozman <sam@gozman.space>"]
description = "Remote Value Parser - CLI tool for parsing string values from static web pages"
keywords = ["rvp", "parser", "cli"]
rust-version = "1.72.0"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "rvp"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
anyhow = "1.0.79"
paste = "1.0.14"
tokio = { version = "1.36.0", features = ["test-util", "macros", "rt-multi-thread"] }
validator = { version = "0.16.1", features = ["derive"] }
reqwest = "0.11.24"
scraper = "0.18.1"
inquire = "0.6.2"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.9"
serde_json = "1.0.113"
rand = "0.8.5"
comfy-table = "7.1.0"
regex = "1.10.3"
