[package]
name = "rvp"
version = "0.1.5"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/samgozman/rvp"
repository = "https://github.com/samgozman/rvp"
authors = ["Sam Gozman <sam@gozman.space>"]
description = "Remote Value Parser - CLI tool for parsing string values from static web pages"
keywords = ["rvp", "parser", "cli"]
rust-version = "1.77.2"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "rvp"
path = "src/main.rs"

[profile.release]
lto = true
strip = true

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.82"
paste = "1.0.15"
tokio = { version = "1.37.0", features = ["test-util", "macros", "rt-multi-thread"] }
validator = { version = "0.18.1", features = ["derive"] }
reqwest = "0.12.4"
scraper = "0.19.0"
inquire = "0.7.5"
serde = { version = "1.0.199", features = ["derive"] }
toml = "0.8.12"
serde_json = "1.0.116"
rand = "0.8.5"
comfy-table = "7.1.1"
regex = "1.10.4"
